# mdrecall-MCP

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/testcases/: README.md  find_backlinks.md  list_folders.md  list_notes.md  query_frontmatter.md  read_note.md  search_notes.md
scripts/: smoke.py
src/mdrecall/: __init__.py  backlinks.py  frontmatter.py  server.py  vault.py
src/vault_mcp/: __init__.py  backlinks.py  frontmatter.py  search.py  server.py  vault.py
tests/: conftest.py  test_frontmatter.py  test_search.py  test_vault.py
tests/fixtures/010-projects/: alpha.md  beta.md  gamma.md  unicode-note.md  zeta.md
tests/fixtures/010-projects/_archive/: old-note.md
tests/fixtures/060-hackathons/: delta.md
tests/fixtures/070-concepts/tech/: postgresql.md  python.md  react.md  rust.md
tests/fixtures/999-meta/: README.md
