[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdrecall"
version = "0.1.0"
description = "Local MCP server exposing a markdown knowledge vault to Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ryl1k" }]
dependencies = [
    "mcp>=1.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
mdrecall = "mdrecall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdrecall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mdrecall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
