[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdrecall"
version = "0.1.0"
description = "Local MCP server exposing a markdown knowledge vault to Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ryl1k" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "obsidian",
    "markdown",
    "knowledge-management",
    "claude",
    "claude-desktop",
    "claude-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ryl1k/mdrecall"
Repository = "https://github.com/ryl1k/mdrecall"
Issues = "https://github.com/ryl1k/mdrecall/issues"
Changelog = "https://github.com/ryl1k/mdrecall/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
mdrecall = "mdrecall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdrecall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mdrecall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
